--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,44 +1,115 @@
 @import 'tailwindcss';
 
 :root {
+    /* Color palette */
+    --mulberry-0: #f2def9;
+    --mulberry-1: #e6bdf4;
+    --mulberry-2: #db9aef;
+    --mulberry-3: #d274eb;
+    --mulberry-4: #bd56d7;
+    --mulberry-5: #9c47b2;
+    --mulberry-6: #7d398e;
+    --mulberry-7: #5e2b6b;
+    --mulberry-8: #411e4a;
+    --mulberry-9: #26112c;
+    --rose-0: #f9dee7;
+    --rose-1: #f3bcd1;
+    --rose-2: #ef99bb;
+    --rose-3: #eb71a5;
+    --rose-4: #d4558e;
+    --rose-5: #af4675;
+    --rose-6: #8c385d;
+    --rose-7: #6a2a47;
+    --rose-8: #491d31;
+    --rose-9: #2b111d;
+    --vermillion-0: #f8dfd9;
+    --vermillion-1: #f2c0b0;
+    --vermillion-2: #eca084;
+    --vermillion-3: #df8159;
+    --vermillion-4: #bd6d4b;
+    --vermillion-5: #9c5a3e;
+    --vermillion-6: #7d4832;
+    --vermillion-7: #5e3625;
+    --vermillion-8: #41261a;
+    --vermillion-9: #26160f;
+    --yellow-0: #e6ec7b;
+    --yellow-1: #ccd254;
+    --yellow-2: #b3b94a;
+    --yellow-3: #9b9f40;
+    --yellow-4: #838736;
+    --yellow-5: #6c6f2c;
+    --yellow-6: #565923;
+    --yellow-7: #41431b;
+    --yellow-8: #2c2d12;
+    --yellow-9: #191a0a;
+    --harlequin-0: #bef2b4;
+    --harlequin-1: #76e35b;
+    --harlequin-2: #68c750;
+    --harlequin-3: #5aac45;
+    --harlequin-4: #4c923a;
+    --harlequin-5: #3f7930;
+    --harlequin-6: #326026;
+    --harlequin-7: #25481d;
+    --harlequin-8: #1a3314;
+    --harlequin-9: #101e0c;
+    --spring-green-0: #b4f2d2;
+    --spring-green-1: #5ae3a5;
+    --spring-green-2: #4fc791;
+    --spring-green-3: #45ac7e;
+    --spring-green-4: #3a926a;
+    --spring-green-5: #307858;
+    --spring-green-6: #266046;
+    --spring-green-7: #1d4835;
+    --spring-green-8: #143325;
+    --spring-green-9: #0c1e16;
+    --cerulean-0: #d0e8f6;
+    --cerulean-1: #9cd3ef;
+    --cerulean-2: #5cbde7;
+    --cerulean-3: #50a4c7;
+    --cerulean-4: #448ba9;
+    --cerulean-5: #38728c;
+    --cerulean-6: #2c5b6f;
+    --cerulean-7: #214453;
+    --cerulean-8: #172f39;
+    --cerulean-9: #0d1b21;
+    --blue-0: #e3e3fa;
+    --blue-1: #c8c7f5;
+    --blue-2: #aeabf1;
+    --blue-3: #9390ee;
+    --blue-4: #7973eb;
+    --blue-5: #5f59de;
+    --blue-6: #4c47b1;
+    --blue-7: #393586;
+    --blue-8: #28255c;
+    --blue-9: #171636;
+
+    /* color variables */
     --background: #ffffff;
     --foreground: #171717;
+    /* TODO: select colors */
+    --primary: var(--mulberry-4);
+    --on-primary: #ffffff;
+
+    --secondary: var(--rose-4);
+    --on-secondary: #ffffff;
+
+    --success: var(--spring-green-1);
+    --warning: var(--yellow-1);
+    --error: var(--vermillion-3);
+
+    
 }
 
-@theme inline {
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
+/* set up dark mode */
+/* @media (prefers-color-scheme: dark) {
     :root {
         --background: #0a0a0a;
         --foreground: #ededed;
     }
-}
+} */
 
 body {
     background: var(--background);
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Module Grid and Card */
-
-.moduleGrid {
-    @apply grid grid-cols-3 gap-6 justify-items-center;
-}
-
-.moduleCard {
-    @apply bg-white rounded-2xl shadow-md overflow-hidden w-48 h-48 flex flex-col items-center;
-}
-
-.moduleImageWrapper {
-    @apply relative w-full h-32;
-}
-
-.moduleLabel {
-    @apply bg-purple-200 text-black text-center font-semibold py-2 w-full;
 }
