ah shit forgot to branch sorry

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,103 +1,100 @@
 @import 'tailwindcss';
 
 :root {
-    /* Color palette */
-    --mulberry-0: #f2def9;
-    --mulberry-1: #e6bdf4;
-    --mulberry-2: #db9aef;
-    --mulberry-3: #d274eb;
-    --mulberry-4: #bd56d7;
-    --mulberry-5: #9c47b2;
-    --mulberry-6: #7d398e;
-    --mulberry-7: #5e2b6b;
-    --mulberry-8: #411e4a;
-    --mulberry-9: #26112c;
-    --rose-0: #f9dee7;
-    --rose-1: #f3bcd1;
-    --rose-2: #ef99bb;
-    --rose-3: #eb71a5;
-    --rose-4: #d4558e;
-    --rose-5: #af4675;
-    --rose-6: #8c385d;
-    --rose-7: #6a2a47;
-    --rose-8: #491d31;
-    --rose-9: #2b111d;
-    --vermillion-0: #f8dfd9;
-    --vermillion-1: #f2c0b0;
-    --vermillion-2: #eca084;
-    --vermillion-3: #df8159;
-    --vermillion-4: #bd6d4b;
-    --vermillion-5: #9c5a3e;
-    --vermillion-6: #7d4832;
-    --vermillion-7: #5e3625;
-    --vermillion-8: #41261a;
-    --vermillion-9: #26160f;
-    --yellow-0: #e6ec7b;
-    --yellow-1: #ccd254;
-    --yellow-2: #b3b94a;
-    --yellow-3: #9b9f40;
-    --yellow-4: #838736;
-    --yellow-5: #6c6f2c;
-    --yellow-6: #565923;
-    --yellow-7: #41431b;
-    --yellow-8: #2c2d12;
-    --yellow-9: #191a0a;
-    --harlequin-0: #bef2b4;
-    --harlequin-1: #76e35b;
-    --harlequin-2: #68c750;
-    --harlequin-3: #5aac45;
-    --harlequin-4: #4c923a;
-    --harlequin-5: #3f7930;
-    --harlequin-6: #326026;
-    --harlequin-7: #25481d;
-    --harlequin-8: #1a3314;
-    --harlequin-9: #101e0c;
-    --spring-green-0: #b4f2d2;
-    --spring-green-1: #5ae3a5;
-    --spring-green-2: #4fc791;
-    --spring-green-3: #45ac7e;
-    --spring-green-4: #3a926a;
-    --spring-green-5: #307858;
-    --spring-green-6: #266046;
-    --spring-green-7: #1d4835;
-    --spring-green-8: #143325;
-    --spring-green-9: #0c1e16;
-    --cerulean-0: #d0e8f6;
-    --cerulean-1: #9cd3ef;
-    --cerulean-2: #5cbde7;
-    --cerulean-3: #50a4c7;
-    --cerulean-4: #448ba9;
-    --cerulean-5: #38728c;
-    --cerulean-6: #2c5b6f;
-    --cerulean-7: #214453;
-    --cerulean-8: #172f39;
-    --cerulean-9: #0d1b21;
-    --blue-0: #e3e3fa;
-    --blue-1: #c8c7f5;
-    --blue-2: #aeabf1;
-    --blue-3: #9390ee;
-    --blue-4: #7973eb;
-    --blue-5: #5f59de;
-    --blue-6: #4c47b1;
-    --blue-7: #393586;
-    --blue-8: #28255c;
-    --blue-9: #171636;
+    --violet-0: #eae0fd;
+    --violet-1: #d6c1fc;
+    --violet-2: #c4a2fb;
+    --violet-3: #b281fa;
+    --violet-4: #a25df9;
+    --violet-5: #874ad2;
+    --violet-6: #6c3ba8;
+    --violet-7: #512d7e;
+    --violet-8: #381f58;
+    --violet-9: #221335;
+    --fuschia-0: #fddbf4;
+    --fuschia-1: #fbb5ea;
+    --fuschia-2: #fa8ce1;
+    --fuschia-3: #f959d9;
+    --fuschia-4: #d44bb9;
+    --fuschia-5: #ae3e98;
+    --fuschia-6: #8c327a;
+    --fuschia-7: #6a255c;
+    --fuschia-8: #491a40;
+    --fuschia-9: #2b0f26;
+    --sanguine-0: #fdddde;
+    --sanguine-1: #fcbbbd;
+    --sanguine-2: #fa969a;
+    --sanguine-3: #f96c73;
+    --sanguine-4: #e14f58;
+    --sanguine-5: #ba4249;
+    --sanguine-6: #95353a;
+    --sanguine-7: #71282c;
+    --sanguine-8: #4e1c1e;
+    --sanguine-9: #2b0f11;
+    --amber-0: #fbe1b4;
+    --amber-1: #f5c557;
+    --amber-2: #d6ac4c;
+    --amber-3: #b99542;
+    --amber-4: #9e7f38;
+    --amber-5: #81682e;
+    --amber-6: #685325;
+    --amber-7: #4f401c;
+    --amber-8: #352b13;
+    --amber-9: #1f190b;
+    --chartreuse-0: #b2f95a;
+    --chartreuse-1: #9ddd4e;
+    --chartreuse-2: #8ac144;
+    --chartreuse-3: #77a73b;
+    --chartreuse-4: #658f32;
+    --chartreuse-5: #54762a;
+    --chartreuse-6: #425d21;
+    --chartreuse-7: #324619;
+    --chartreuse-8: #243312;
+    --chartreuse-9: #161f0b;
+    --malachite-green-0: #96faa6;
+    --malachite-green-1: #51e76f;
+    --malachite-green-2: #47ca61;
+    --malachite-green-3: #3eaf54;
+    --malachite-green-4: #349347;
+    --malachite-green-5: #2b7a3b;
+    --malachite-green-6: #23622f;
+    --malachite-green-7: #1a4923;
+    --malachite-green-8: #123318;
+    --malachite-green-: #0b1f0f;
+    --cyan-0: #71f9f1;
+    --cyan-1: #4fe0d8;
+    --cyan-2: #45c4bd;
+    --cyan-3: #3caaa4;
+    --cyan-4: #33908b;
+    --cyan-5: #2a7672;
+    --cyan-6: #22605c;
+    --cyan-7: #194644;
+    --cyan-8: #123331;
+    --cyan-9: #0b1f1d;
+    --sapphire-blue-0: #dde4fd;
+    --sapphire-blue-1: #bbcafc;
+    --sapphire-blue-2: #97b0fa;
+    --sapphire-blue-3: #7096f9;
+    --sapphire-blue-4: #517ee5;
+    --sapphire-blue-5: #4368bd;
+    --sapphire-blue-6: #355397;
+    --sapphire-blue-7: #283e71;
+    --sapphire-blue-8: #1c2b4e;
+    --sapphire-blue-9: #0f182b;
 
     /* color variables */
     --background: #ffffff;
     --foreground: #171717;
     /* TODO: select colors */
-    --primary: var(--mulberry-4);
+    --primary: var(--violet-3);
     --on-primary: #ffffff;
 
-    --secondary: var(--rose-4);
+    --secondary: var(--fuchsia-4);
     --on-secondary: #ffffff;
 
     --success: var(--spring-green-1);
     --warning: var(--yellow-1);
     --error: var(--vermillion-3);
-
-    
 }
 
 /* set up dark mode */
